# shipay-py-ufbr

./: pyproject.toml  setup.py
